--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "16.x"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "nodemon app.js"
   },
   "keywords": [],
@@ -23,5 +23,9 @@
     "mysql2": "^3.6.0",
     "nodemon": "^3.0.1",
     "sequelize": "^6.33.0"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.5",
+    "jest": "^29.7.0"
   }
 }
